--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pdf": "^7.7.1"
