--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pdftron/webviewer": "^11.3.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "docx-preview": "^0.3.4",
+    "docx4js": "^3.3.0",
     "lucide-react": "^0.344.0",
     "mammoth": "^1.9.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pdf": "^7.7.1"
